objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Broker</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Building Insurance Expiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Collection</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EDR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Agree</fullName>
        </values>
        <values>
            <fullName>Happy with response</fullName>
        </values>
        <values>
            <fullName>Hardship Request</fullName>
        </values>
        <values>
            <fullName>Info Provided</fullName>
        </values>
        <values>
            <fullName>Info Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Previous IDR</fullName>
        </values>
        <values>
            <fullName>Resolved for financial institution</fullName>
        </values>
        <values>
            <fullName>Will they let close</fullName>
        </values>
        <values>
            <fullName>Withdraw</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enforcement Team</fullName>
        <description>This will be used to give the limited values to the Enforcement Team agents in the standard case  status picklist field.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Hardship</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IDR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Satisfied</fullName>
        </values>
        <values>
            <fullName>Escalation to EDR</fullName>
        </values>
        <values>
            <fullName>Hardship Request</fullName>
        </values>
        <values>
            <fullName>Info Provided</fullName>
        </values>
        <values>
            <fullName>Info Received</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Previous IDR</fullName>
        </values>
        <values>
            <fullName>Resolved for financial institution</fullName>
        </values>
        <values>
            <fullName>Withdraw</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Loan Statement Request %E2%80%93 PAF</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mortgage Broker Accreditation</fullName>
        <description>Support process for crm mortgages project for accreditation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Quiz Completed</fullName>
        </values>
        <values>
            <fullName>Verification Completed</fullName>
        </values>
        <values>
            <fullName>Verification In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mortgage Broker Scenario</fullName>
        <description>Support process for mortgage scenarios</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Response Received Post Closure</fullName>
        </values>
        <values>
            <fullName>Response Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mortgage Broker Transfer</fullName>
        <description>Support process for crm mortgages project for broker transfers</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Verification Completed</fullName>
        </values>
        <values>
            <fullName>Verification In Progress</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mortgage PPS Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payment Detail Change Request %E2%80%93 PAF</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payout Figure Request - PAF</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>QA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting BDM</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Docs Received</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Setup in Progress</fullName>
        </values>
        <values>
            <fullName>Verification In Progress</fullName>
        </values>
        <values>
            <fullName>Verification Passed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce COE</fullName>
        <description>Process for Salesforce COE to manage cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Information</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not an issue</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Resolved - Not deployed</fullName>
        </values>
        <values>
            <fullName>Waiting On 3rd Party</fullName>
        </values>
        <values>
            <fullName>Workaround Provided</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>User Activation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Information</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Best_Time_to_call__c</fullName>
        <label>Best Time to call</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_time_to_call_Hardship__c</fullName>
        <label>Best time to call Hardship</label>
        <picklist>
            <picklistValues>
                <fullName>Morning (9am – 12pm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon (2pm – 5pm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midday (12pm – 2pm)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_ID__c</fullName>
        <description>Broker Integer ID that will be populated by external systems as part of integrations.</description>
        <label>Broker ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Days__c</fullName>
        <formula>CASE(
MOD(TODAY()- DATE(1900, 1, 7), 7), 0, TODAY()+5, 1, TODAY()+7, 2, TODAY()+7,3, TODAY()+7, 4, TODAY()+7, 5, TODAY()+7, 6, TODAY()+6,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business unit to which the case relates.  This allows the business to view a list of their cases for prioritisation.</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Originations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal (COE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CABRequirement__c</fullName>
        <label>CAB Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expediated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Broker_Relationship__c</fullName>
        <label>Broker Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect/via Aggregator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_CAPSI_Username_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAPSI username created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_CAPSI_username_deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAPSI username deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Case_age__c</fullName>
        <formula>IF((!IsClosed),(Now() - CreatedDate)*24, (ClosedDate -  CreatedDate )*24 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Case_age_indicator__c</fullName>
        <formula>IF(AND(CRM_Case_age__c != 0,CRM_Case_age__c &gt; 48), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,25,25),
IF(AND(CRM_Case_age__c &gt; 24,CRM_Case_age__c &lt;= 48),
IMAGE(&apos;/resource/1477306159000/YellowIndecator&apos;,&apos;yellow&apos;,25,25),
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,25,25))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitelabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aussie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Choice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Closed_Case_Reason__c</fullName>
        <label>Closed Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Suitable Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Contact_updated_with_info_deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact updated with relevant info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Contact_updated_with_relevant_info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact updated with relevant info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Logins_sent_to_BDM__c</fullName>
        <label>Logins sent to BDM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ARM_Id__c</fullName>
        <label>ARM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Time_Elapsed__c</fullName>
        <formula>FLOOR((NOW() - 
CASE(Status, 
&apos;Verification In Progress&apos;,CRM_Mtg_Verification_Started_Date_Time__c, 
&apos;Verification Completed&apos;,CRM_Mtg_Verification_Completed_Date_Time__c, 
&apos;Quiz Sent&apos;,CRM_Mtg_Quiz_Sent_Date_Time__c, 
&apos;Quiz Completed&apos;,CRM_Mtg_Quiz_Completed_Date_Time__c, 
CRM_Mtg_Date_Time_Assigned__c
))*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Elapsed (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Time_Indicator__c</fullName>
        <formula>IF(CRM_Mtg_Accreditation_Time_Elapsed__c &lt;= 120, 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,25,25), 
IF(CRM_Mtg_Accreditation_Time_Elapsed__c &gt; 120 &amp;&amp; CRM_Mtg_Accreditation_Time_Elapsed__c &lt;= 240, 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,25,25), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,25,25) 
) 
)</formula>
        <label>Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Automated_Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Email__c</fullName>
        <formula>CRM_Mtg_Mortgage_BDM__r.Email</formula>
        <label>BDM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Follow_Up_Date__c</fullName>
        <description>When BDM can follow up - used by scenario</description>
        <inlineHelpText>When BDM can follow up</inlineHelpText>
        <label>BDM Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Full_Name__c</fullName>
        <formula>CRM_Mtg_Mortgage_BDM__r.FirstName &amp; &apos; &apos; &amp; CRM_Mtg_Mortgage_BDM__r.LastName</formula>
        <label>BDM Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Mobile__c</fullName>
        <formula>CRM_Mtg_Mortgage_BDM__r.MobilePhone</formula>
        <label>BDM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDM Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Id__c</fullName>
        <formula>Contact.CRM_Mtg_Accreditation_Id__c</formula>
        <label>Broker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case_Indicator__c</fullName>
        <formula>CASE(Status, 
&quot;New&quot;,IMAGE(&apos;/resource/1486268702000/CRM_Mtg_Case_Created&apos;,&apos;New Case&apos;,30,30),
&quot;Response Sent&quot;,IMAGE(&apos;/resource/1486271735000/CRM_Mtg_Email_Sent&apos;,&apos;Response Sent&apos;,30,30),
&quot;Response Received&quot;,IMAGE(&apos;/resource/1486269012000/CRM_Mtg_Email_Received&apos;,&apos;Response Received&apos;,30,30),
&quot;Closed&quot;,IMAGE(&apos;/resource/1486269513000/CRM_Mtg_Case_Closed&apos;,&apos;Case Closed&apos;,30,30), 
&quot;&quot;)</formula>
        <label>Case Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case_Owner__c</fullName>
        <formula>IF(Owner:Queue.Id != &apos;&apos;,
Owner:Queue.QueueName, 
Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName)</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Credit_History__c</fullName>
        <label>Credit History</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults over 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults greater than 24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults under $1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged Bankrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part 9/10 debt agreements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Date_Time_Assigned__c</fullName>
        <label>Date/Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Declined_Reason_Details__c</fullName>
        <label>Declined/Other Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 2 months mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA and Substitution Simultaneously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABN &lt;12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABN &lt; 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Back of Distributions unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age of Applicant and Required Loan Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment &lt;50sqm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower of convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridging Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual employment length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction - ABN Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction - Defaults &lt;24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction - Security Unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Bankrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaults &gt;$500 For Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not fit Alt Doc requirements for SE applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exit Strategy Unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favourable Purchase Arms Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favourable Purchase Cash Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Email_Received_Date_Time__c</fullName>
        <label>Last Email Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Email_Sent_Date_Time__c</fullName>
        <label>Last Email Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Employment_Type__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed - Alt Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centerlink - Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Exception_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Exception_Description__c</fullName>
        <label>Exception Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_First_Response_Sent_Date_Time__c</fullName>
        <label>First Response Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_First_Response_TAT__c</fullName>
        <formula>IF(TEXT(CRM_Mtg_First_Response_Sent_Date_Time__c) != &apos;&apos;,
FLOOR((CRM_Mtg_First_Response_Sent_Date_Time__c - CreatedDate)*24*60),
0)</formula>
        <label>First Response SLA (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_First_Response_To_Closed_TAT__c</fullName>
        <formula>IF(TEXT(CRM_Mtg_First_Response_Sent_Date_Time__c) != &apos;&apos;, 
FLOOR((ClosedDate - CRM_Mtg_First_Response_Sent_Date_Time__c)*24*60), 
0)</formula>
        <label>First Response To Closed SLA (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_LVR__c</fullName>
        <formula>CRM_Mtg_Amount__c / CRM_Mtg_Estimated_Value__c</formula>
        <label>LVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Location_PostCode__c</fullName>
        <label>Postcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Location_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Location__c</fullName>
        <label>Suburb/Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_Arrears__c</fullName>
        <label>Mortgage Conduct and Arrears</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1 months arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 months arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRM_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_No_of_Emails_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Emails Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_No_of_Emails_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Open_to_Closed_TAT__c</fullName>
        <formula>IF(TEXT(ClosedDate) != &apos;&apos;,
FLOOR((ClosedDate - CreatedDate)*24*60), 
0)</formula>
        <label>Open to Closed SLA (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>